k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: NodePort
  ports: 
    - name: http-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: web-server
