k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: sample-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service: 
                name: web-server-service
                port:
                  number: 8080
            path: "/"
            pathType: ImplementationSpecific
